package com.rodbailey.covid.presentation.main

enum class MainScreenTag(val tag : String) {
    TAG_TEXT_SEARCH("tag.text.search"),
    TAG_PROGRESS_SEARCH("tag.progress.search"),
    TAG_LAZY_COLUMN_SEARCH("tag.lazy.column.search"),
    TAG_CARD("tag.card"),
    TAG_CARD_TITLE("tag.card.title"),
    TAG_ICON_GLOBAL("tag.icon.global")
}