<resources>
    <string name="app_name">Covid</string>
    <string name="failed_to_load_data_for">Failed to load data for \"%1$s\".</string>
    <string name="no_data_available_for">No data available for \"%1$s\".</string>
    <string name="failed_to_load_country_list">Failed to load country list.</string>
    <string name="region_global">Global</string>
    <string name="region_view_stats_for">View stats for %1$s</string>
    <string name="data_panel_collapse">Collapse</string>

    <string name="data_field_confirmed">Confirmed:</string>
    <string name="data_field_deaths">Deaths:</string>
    <string name="data_field_active">Active:</string>
    <string name="data_field_fatality_rate">Fatality Rate:</string>
    <string name="search_field_hint">Search country</string>
    <string name="cache_stats_title">Cache Statistics</string>
    <string name="cache_stats_back_button">Back</string>
    <string name="cache_stats_sort_control_label">Sort by</string>
    <string name="cache_stats_summary_entries_label">Entries</string>
    <string name="cache_stats_summary_total_size_label">Total size</string>
    <string name="cache_stats_summary_average_age_label">Average age</string>
    <string name="cache_stats_summary_oldest_entry_label">Oldest entry</string>
    <string name="cache_stats_summary_youngest_entry_label">Youngest entry</string>
    <string name="sort_option_iso_code_asc">ISO Code (up)</string>
    <string name="sort_option_iso_code_desc">ISO Code (down)</string>
    <string name="sort_option_age_asc">Age (up)</string>
    <string name="sort_option_age_desc">Age (down)</string>
    <string name="cache_stats_clear_button">CLEAR</string>
</resources>